[tool.poetry]
name = "pagemap"
version = "0.1.0"
description = "Crawl a website and create a structured map of its pages"
authors = ["Neil Johnson <neil@cadent.net>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pagemap", from = "src"}]

[tool.poetry.scripts]
pagemap = "pagemap.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
responses = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
