[tool.poetry]
name = "sitewalker"
version = "0.3.1"
description = "Crawl a website and create a structured map of its pages"
authors = ["Neil Johnson <neil@cadent.net>"]
readme = "README.md"
license = "MIT"
packages = [{include = "sitewalker", from = "src"}]

[tool.poetry.scripts]
sitewalker = "sitewalker.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
responses = "^0.25.3"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
